fix: fix bug with horizontal scroll

--- a/songbird/pages/main/style/style.scss
+++ b/songbird/pages/main/style/style.scss
@@ -12,6 +12,8 @@ html {
   font-family: 'Roboto';
   font-style: normal;
   height: 100%;
+  overflow-x: hidden;
+  margin-right: calc(-1 * (100vw - 100%));
 }
 
 .container {
